systemclock: Invalid internal time calculation causes non-increasing clock time
I have the next pipeline:
filesrc location=bbb.mp4 ! qtdemux ! h264parse ! d3d11h264dec ! video/x-raw ! d3d11upload ! d3d11convert ! video/x-raw(memory:D3D11Memory), format=(string)RGBA ! d3d11videosink name=overlay sync=1 qos=0
Video is freeze on first frame. Everything is fine with pipeline:
filesrc location=bbb.mp4 ! qtdemux ! h264parse ! d3d11h264dec ! video/x-raw ! d3d11upload ! d3d11convert ! video/x-raw(memory:D3D11Memory), format=(string)RGBA ! d3d11videosink name=overlay sync=0 qos=0
OS: Windows 10, device: XBOX One S.